--- a/src/views/crud.ejs
+++ b/src/views/crud.ejs
@@ -45,7 +45,7 @@
                     </div>
                     <div class="form-group col-md-6">
                         <label for="inputPassword4">Firts Name </label>
-                        <input type="text" class="form-control" name="firtName" placeholder="Firts Name">
+                        <input type="text" class="form-control" name="firstName" placeholder="Firts Name">
                     </div>
                 </div>
                 <!-- ------------------------------------- -->
