--- a/src/views/displayCRUD.ejs
+++ b/src/views/displayCRUD.ejs
@@ -4,16 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Display All Users</title>
 </head>
 
 <body>
-    <table border="1">
+    <table border="1" style="width: 90%; margin: 10px; border-collapse: collapse; border: solid 2px black;">
         <tr>
             <th>Email</th>
             <th>First Name </th>
             <th> Last Name</th>
             <th> Address</th>
+            <th> Action</th>
         </tr>
 
         <% for(let i=0; i< dataTable.length; i++) { %>
@@ -30,6 +31,11 @@
                 <td>
                     <%= dataTable[i].address %>
                 </td>
+                <td><a href="/edit-crud?id=<%= dataTable[i].id %>"
+                        style="text-decoration: none; border: 1px solid black; padding: 2px; color: black;">Edit</a>
+                    <a href="/delete-crud?id=<%= dataTable[i].id %>" style="text-decoration: none;">Delete</a>
+                </td>
+
             </tr>
             <% } %>
     </table>
